2007-05-25  Eugene Teo  <eteo@redhat.com>

	* lib/sos/plugins/xen.py, lib/sos/plugins/pam.py, lib/sos/plugins/memory.py:
	- Edited xen.py to determine if CPU has PAE/Intel VT/AMD-V support
	- Edited pam.py to gather configurations in /etc/security, and files
	  listing of /lib/security/pam_*so
	- Edited memory.py to gather /proc/{vmstat,slabinfo}, and free -m
	  output

2006-06-19  Steve Conklin  <sconklin@tintin>

	* ChangeLog, LICENSE, setup.py, sos.spec:
	Added License file and bumped release

2006-06-08  dlehman  <dlehman@tintin>

	* example_plugins/example.py, example_plugins/fsusage.py, example_plugins/release.py, example_plugins/template.py, lib/sos/helpers.py, lib/sos/plugins/apache.py, lib/sos/plugins/bootloader.py, lib/sos/plugins/cluster.py, lib/sos/plugins/filesys.py, lib/sos/plugins/ftp.py, lib/sos/plugins/general.py, lib/sos/plugins/hardware.py, lib/sos/plugins/kernel.py, lib/sos/plugins/ldap.py, lib/sos/plugins/libraries.py, lib/sos/plugins/mail.py, lib/sos/plugins/memory.py, lib/sos/plugins/named.py, lib/sos/plugins/networking.py, lib/sos/plugins/pam.py, lib/sos/plugins/process.py, lib/sos/plugins/rhn.py, lib/sos/plugins/rpm.py, lib/sos/plugins/samba.py, lib/sos/plugins/selinux.py, lib/sos/plugins/squid.py, lib/sos/plugins/startup.py, lib/sos/plugins/system.py, lib/sos/plugins/tarball.py, lib/sos/plugins/x11.py, lib/sos/plugintools.py, lib/sos/policyredhat.py, setup.py, sosreport:
	- Flesh out rhn plugin to handle Proxy or Satellite
	- Add package queries to policyredhat.py (allPkgsByName, pkgByName, pkgNVRA)
	- Add policy instance to the commons dict for access from plugins
	- Use string objects' methods instead of the string module where possible
	- Remove imports of unused string module
	- Cleanup some typos, redundant initializations, &c

2006-06-08  dlehman  <dlehman@tintin>
